--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -496,6 +496,14 @@
   value: Admin Management
   description: A string for the title of admin management section.
 
+- name: USER_SECURITY_SEND_EMAIL_RESET_CODE_BUTTON
+  value: Send Verification Code
+  description: A string for the label of send email reset code button.
+
+- name: USER_SECURITY_SEND_EMAIL_RESET_CODE_NEW_EMAIL_BUTTON
+  value: Send Verification Code to New Email
+  description: A string for the label of send email reset code to new email button.
+
 - name: USER_EDIT_PAGE_TITLE
   value: Edit Profile
   description: A string for the title of user edit page.
@@ -505,7 +513,7 @@
   description: A string for the title of user settings page.
 
 - name: USER_EDIT_PAGE_EMAIL_VERIFICATION_DIALOG_TITLE
-  value: Verify your email
+  value: Verify Your Email
   description: A string for the title of email verification dialog.
 
 - name: USER_EDIT_PAGE_EMAIL_VERIFICATION_DIALOG_DESCRIPTION
