--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -338,6 +338,11 @@
   description: A string for the label of email input.
   raw: Email
 
+- name: AUTH_EMAIL_LABEL
+  value: null
+  description: A string for the label of authentication email input.
+  raw: Authentication Email
+
 - name: DISPLAY_EMAIL_HINT
   value: 此邮箱将在个人资料中显示，但不会用于认证。
   description: A string for the hint of display email input.
@@ -350,10 +355,40 @@
   description: A string for the hint of authentication email input.
   raw: This email will be used for authentication and notifications.
 
+- name: CURRENT_EMAIL_LABEL
+  value: null
+  description: A string for the label of current email input.
+  raw: Current Email
+
+- name: NEW_EMAIL_LABEL
+  value: null
+  description: A string for the label of new email input.
+  raw: New Email
+
+- name: VERIFICATION_CODE_CURRENT_EMAIL_LABEL
+  value: null
+  description: A string for the label of verification code for current email input.
+  raw: Verification Code for Current Email
+
+- name: VERIFICATION_CODE_NEW_EMAIL_LABEL
+  value: null
+  description: A string for the label of verification code for new email input.
+  raw: Verification Code for New Email
+
 - name: PASSWORD_CONFIRM_LABEL
   value: 确认密码
   description: A string for the label of password confirm input.
   raw: Confirm Password
+
+- name: CURRENT_PASSWORD_LABEL
+  value: null
+  description: A string for the label of current password input.
+  raw: Current Password
+
+- name: NEW_PASSWORD_LABEL
+  value: null
+  description: A string for the label of new password input.
+  raw: New Password
 
 - name: VERIFICATION_CODE_LABEL
   value: 验证码
@@ -455,17 +490,19 @@
   description: A string for the error message when the nickname is too long.
   raw: The nickname is too long. Please shorten it.
 
-- name: VALIDATION_ERROR_PASSWORD_CONFIRM_EMPTY
-  value: 确认密码不能为空。
-  description: A string for the error message when password confirm is empty.
-  raw: Password confirm cannot be empty.
-
 - name: VALIDATION_ERROR_PASSWORD_CONFIRM_MISMATCH
   value: 确认密码与密码不匹配。
   description: >-
     A string for the error message when password confirm does not match the
     password.
   raw: Password confirm does not match the password.
+
+- name: VALIDATION_ERROR_PASSWORD_LENGTH_ERROR
+  value: 密码长度必须在 {0} 到 {1} 个字符之间。
+  description: >-
+    A string for the error message when password length is invalid. {0} is the
+    minimum length, and {1} is the maximum length.
+  raw: Password must be between {0} and {1} characters.
 
 - name: VALIDATION_ERROR_TITLE_EMPTY
   value: 标题不能为空。
@@ -562,6 +599,13 @@
   description: A string for the title of user profile page.
   raw: '{0}''s Profile'
 
+- name: USER_SETTING_PAGE_INFO
+  value: null
+  description: >-
+    A string for the info of user settings page. {0} is the username, {1} is the
+    user ID.
+  raw: You are editing the settings for {0} (#{1}).
+
 - name: USER_PREFERENCE_PAGE_TITLE
   value: 偏好设置
   description: A string for the title of user preferences page.
@@ -571,6 +615,21 @@
   value: 安全设置
   description: A string for the title of user security page.
   raw: Security Setting
+
+- name: USER_SECURITY_PAGE_ADMIN_MANAGEMENT_TITLE
+  value: null
+  description: A string for the title of admin management section.
+  raw: Admin Management
+
+- name: USER_SECURITY_SEND_EMAIL_RESET_CODE_BUTTON
+  value: null
+  description: A string for the label of send email reset code button.
+  raw: Send Verification Code
+
+- name: USER_SECURITY_SEND_EMAIL_RESET_CODE_NEW_EMAIL_BUTTON
+  value: null
+  description: A string for the label of send email reset code to new email button.
+  raw: Send Verification Code to New Email
 
 - name: USER_EDIT_PAGE_TITLE
   value: 编辑资料
@@ -583,9 +642,9 @@
   raw: Edit {0}'s Profile
 
 - name: USER_EDIT_PAGE_EMAIL_VERIFICATION_DIALOG_TITLE
-  value: 验证您的邮箱
+  value: null
   description: A string for the title of email verification dialog.
-  raw: Verify your email
+  raw: Verify Your Email
 
 - name: USER_EDIT_PAGE_EMAIL_VERIFICATION_DIALOG_DESCRIPTION
   value: 我们已向您的邮箱发送了一个验证码。请在下方输入验证码以验证您的邮箱。
