--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -301,6 +301,11 @@
     noopener">Privacy Policy</a> and <a href="https://policies.google.com/terms"
     target="_blank" rel="noreferrer noopener">Terms of Service</a> apply.
 
+- name: ALREADY_HAVE_ACCOUNT
+  value: Already have an account?
+  description: A string for the link to sign in page.
+  raw: Already have an account?
+
 - name: SHOW_PASSWORD_LABEL
   value: Show password
   description: A string for the label of show password button.
@@ -458,6 +463,11 @@
   value: Go to the last page. The last page is {0}.
   description: A string for the label of last page button.
   raw: Go to the last page. The last page is {0}.
+
+- name: SEND_CODE_LABEL
+  value: Send Code
+  description: A string for the label of send code button.
+  raw: Send Code
 
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
   value: Username or email cannot be empty.
