--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -238,6 +238,10 @@
     target="_blank" rel="noreferrer noopener">Terms of Service</a> apply.
   description: A string for the notice of reCAPTCHA.
 
+- name: ALREADY_HAVE_ACCOUNT
+  value: Already have an account?
+  description: A string for the link to sign in page.
+
 - name: SHOW_PASSWORD_LABEL
   value: Show password
   description: A string for the label of show password button.
@@ -361,6 +365,10 @@
 - name: LAST_PAGE_BUTTON_ARIA_LABEL
   value: Go to the last page. The last page is {0}.
   description: A string for the label of last page button.
+
+- name: SEND_CODE_LABEL
+  value: Send Code
+  description: A string for the label of send code button.
 
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
   value: Username or email cannot be empty.
