--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -223,6 +223,11 @@
   description: A string for the label of problems navigation.
   raw: Problems
 
+- name: NAVIGATION_USERS
+  value: Users
+  description: A string for the label of users navigation.
+  raw: Users
+
 - name: NAVIGATION_PROBLEM_NEW
   value: New Problem
   description: A string for the label of new problem navigation.
