--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -223,6 +223,11 @@
   description: A string for the label of problems navigation.
   raw: Problems
 
+- name: NAVIGATION_USERS
+  value: null
+  description: A string for the label of users navigation.
+  raw: Users
+
 - name: NAVIGATION_PROBLEM_NEW
   value: 新建题目
   description: A string for the label of new problem navigation.
