--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -486,6 +486,10 @@
   value: Avatar
   description: A string for the label of user avatar.
 
+- name: USER_AVATAR_BUTTON_TOOLTIP
+  value: Change Avatar
+  description: A string for the label of change avatar button.
+
 - name: USER_PROFILE_PAGE_TITLE_WITH_NAME
   value: '{0}''s Profile'
   description: A string for the title of user profile page.
